Break connection with parent